Bug 125791 - Text in Autofilter dropdown chages size when hovering over it (w/ 125% DPI scaling)
Summary: Text in Autofilter dropdown chages size when hovering over it (w/ 125% DPI s...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2019-06-07 17:12 UTC by Roman Kuznetsov
Modified: 2019-06-28 10:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (8.23 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-06-08 05:39 UTC, Roman Kuznetsov
Details
Comparison screenshot (60.31 KB, image/png)
2019-06-08 23:35 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-06-07 17:12:42 UTC
Description:
text in Autofilter window chages its size after mouse point's moving

I think it's a regression after Miklos's fixing of the bug 101086

Steps to Reproduce:
1. Open file from attach
2. Open Autofilter window in A1 cell (you'll see big font size)
3. Start moving of mouse point
4. Font size in autofilter window changes to smaller

ps: I like bigger font size from these both

Actual Results:
Font size in autofilter window changes to smaller

Expected Results:
Font size in autofilter window doesn't change its size


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: c30ea50dd2b1c557dfbefc1a4c660fbf2402a604
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-05_00:23:26
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 1 Aron Budea 2019-06-08 01:47:17 UTC
Is an attachment missing here?
Comment 2 Roman Kuznetsov 2019-06-08 05:39:58 UTC
Created attachment 152043 [details]
sample file

sorry, i forgot attach sample
Comment 3 Mike Kaganski 2019-06-08 12:54:16 UTC
Reproducible with Version: 6.4.0.0.alpha0+ (x64)
Build ID: fe977ec07087b103de8c809597fdaea8dd629837
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

*with UI scaling set to 125%*. Setting the scaling to 100% *or to 150%* does not allow to see the problem.
Comment 4 Aron Budea 2019-06-08 23:34:45 UTC
I can confirm this behavior started with the fix of bug 101086, however I think the fundamental problem here is that the autofilter dropdown doesn't support DPI scaling properly, at least at 125%.

See the attached comparison screenshot, and note how:
- in one case the 'Sort Ascending' to 'Standard Filter...' entries aren't scaled (this is the view before the patch and the view after hovering over the items with the patch),
- in the other case the entries are scaled, but don't fit in place.
Comment 5 Aron Budea 2019-06-08 23:35:31 UTC
Created attachment 152058 [details]
Comparison screenshot
Comment 6 Roman Kuznetsov 2019-06-09 13:01:31 UTC
Miklos may be you have some great idea about fixing it?

ps: between flickering and changing of font size I'm selecting second =)
Comment 7 Miklos Vajna 2019-06-11 07:12:00 UTC
I'm not yet sure why this happens, but this is visible on Linux with the gen backend as well.
Comment 8 Commit Notification 2019-06-12 13:47:47 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/47dbbe214641b9a28871d0c82f71b2afb9c5943c%5E%21

tdf#125791 sc autofilter popup: make sure menu item text uses the label font

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2019-06-13 06:44:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/3028480ca720283bdab2878d348c29698d0ace16%5E%21

tdf#125791 sc autofilter popup: make sure menu item text uses the label font

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.