tdf#125791 sc autofilter popup: make sure menu item text uses the label font

It happened that the first and subsequent paints used a different font
size, standardize on the label font.

E.g. the linux gen backend used either 11 or 12 pt font height, now it
always uses 12pt, matching the gtk3 behavior. (No cutoff of text with
Windows gdi 125% text size this way, either.)

(cherry picked from commit 47dbbe214641b9a28871d0c82f71b2afb9c5943c)

Change-Id: Ia3f7b69c5a76e1c15fe04743870e92cffdc351d7